<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mujoco_ros_sim</name>
  <version>0.0.0</version>
  <description>Mujoco robot simuator</description>
  <maintainer email="yoonjh98@snu.ac.kr">Yoon Junheon</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>mujoco_py</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
